--- a/content/20240907_forum2024.md
+++ b/content/20240907_forum2024.md
@@ -16,4 +16,6 @@ Venez nombreux pour vous inscrire !
 
 La fiche d'inscription se trouve [ici]({static}/pdfs/fiche_inscription_coskarate_2024-2025.pdf)
 
+<iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/co-sevres-karate/adhesions/inscription-2024-2025/widget-bouton" style="width: 100%; height: 70px; border: none;"></iframe>
+
 ![Alt Text]({static}/images/cos_karate_plaquette.jpg)
