--- a/content/20240907_forum2024.md
+++ b/content/20240907_forum2024.md
@@ -12,10 +12,8 @@ Bonjour à tous,
 
 Nous serons présents au forum des associations au Square Carrier-Belleuse à Sèvres le samedi 7 septembre 2024 de 10h à 18h, stand 85 côté Grande Rue.
 
-Venez nombreux pour vous inscrire !
+Venez nombreux !
 
-La fiche d'inscription se trouve [ici]({static}/pdfs/fiche_inscription_coskarate_2024-2025.pdf)
-
-<iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/co-sevres-karate/adhesions/inscription-2024-2025/widget-bouton" style="width: 100%; height: 70px; border: none;"></iframe>
+Pour vous inscrire, rendez-vous sur [ici](https://www.helloasso.com/associations/co-sevres-karate/adhesions/inscription-2024-2025) ou téléchargez [la fiche d'inscription]({static}/pdfs/fiche_inscription_coskarate_2024-2025.pdf).
 
 ![Alt Text]({static}/images/cos_karate_plaquette.jpg)
