--- a/content/b2024_tarifs2024.md
+++ b/content/b2024_tarifs2024.md
@@ -11,6 +11,8 @@ Summary: Les tarifs pour les cours de 2024-2025
 
 | Groupe | Tarif Sévrien | Tarif non-Sévrien |
 | ----------- | ----------- | ----------- |
-| Adulte | 360 € | 375 € |
-| Enfant | 270 € | 285 € |
-| Baby | 215 € | 230 € |
+| Adulte - 14 ans et plus | 360 € | 375 € |
+| Enfant - 7 à 14 ans | 270 € | 285 € |
+| Baby - 5* à 6 ans | 215 € | 230 € |
+
+Inscrivez-vous en ligne directement [ici](https://www.helloasso.com/associations/co-sevres-karate/adhesions/inscription-2024-2025).
