--- a/content/b2024_tarifs2024.md
+++ b/content/b2024_tarifs2024.md
@@ -16,3 +16,5 @@ Summary: Les tarifs pour les cours de 2024-2025
 | Baby - 5* à 6 ans | 215 € | 230 € |
 
 Inscrivez-vous en ligne directement [ici](https://www.helloasso.com/associations/co-sevres-karate/adhesions/inscription-2024-2025).
+
+*L'enfant doit avoir 5 ans révolus à la date d'inscription
